# bevy

./: AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
.gitea/workflows/: ci.yml
.github/workflows/: ci.yml  publish.yml
camera/: Cargo.toml  README.md
camera/src/: components.rs  events.rs  input.rs  lib.rs  plugin.rs  systems.rs
cloudiful-bevy-settings/: Cargo.toml  README.md
cloudiful-bevy-settings/src/: action.rs  lib.rs
input/: Cargo.toml  README.md
input/src/: action_state.rs  bindings.rs  device.rs  lib.rs  plugin.rs  systems.rs
localization/: Cargo.toml  README.md
localization/src/: definition.rs  definition_registry.rs  error.rs  lib.rs  loader.rs  locale.rs  localization.rs  text_key.rs  validation.rs
outline/: Cargo.toml  README.md
outline/examples/: basic.rs
outline/src/: lib.rs
scripts/ci/: publish.mjs  publish.test.mjs
settings/: Cargo.toml  README.md
settings/src/: lib.rs  schema.rs  systems.rs
