[package]
name = "cloudiful-bevy-input"
version = "0.1.2"
edition = "2024"
description = "Reusable Bevy input abstraction for game-defined actions."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cloudiful/bevy.git"
homepage = "https://github.com/cloudiful/bevy.git"
documentation = "https://docs.rs/cloudiful-bevy-input"
keywords = ["bevy", "input", "gamepad", "keyboard", "gamedev"]
categories = ["game-development"]

[dependencies]
bevy = { workspace = true, features = ["keyboard", "gamepad", "bevy_gilrs"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
