[package]
name = "cloudiful-bevy-localization"
version = "0.1.0"
edition = "2024"
description = "Reusable Bevy localization runtime built around app-provided static registries."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cloudiful/cloudiful-bevy.git"
homepage = "https://github.com/cloudiful/cloudiful-bevy"
documentation = "https://docs.rs/cloudiful-bevy-localization"
keywords = ["bevy", "localization", "i18n", "gamedev"]
categories = ["game-development", "localization"]

[dependencies]
bevy = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
