[package]
name = "cloudiful-bevy-outline"
version = "0.2.4"
edition = "2024"
description = "Reusable geometry-shell outline plugin for Bevy."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cloudiful/cloudiful-bevy.git"
homepage = "https://github.com/cloudiful/cloudiful-bevy"
documentation = "https://docs.rs/cloudiful-bevy-outline"
keywords = ["bevy", "outline", "graphics", "gamedev"]
categories = ["game-development", "graphics", "rendering"]

[dependencies]
bevy = { workspace = true, features = ["bevy_pbr"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
