[package]
name = "cloudiful-bevy-settings"
version = "0.1.1"
edition = "2024"
description = "Reusable Bevy settings runtime for app-defined actions, field keys, and localization context."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cloudiful/cloudiful-bevy.git"
homepage = "https://github.com/cloudiful/cloudiful-bevy"
documentation = "https://docs.rs/cloudiful-bevy-settings"
keywords = ["bevy", "settings", "ui", "gamedev"]
categories = ["game-development"]

[dependencies]
bevy = { workspace = true }
bevy-persistent = { version = "0.10.0", features = ["toml"] }
serde = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
